--- a/18-react-redux-shelter/package.json
+++ b/18-react-redux-shelter/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "json-server -w db.json --port 3001 -d 2000",
     "build": "vite build",
     "preview": "vite preview"
   },
