--- a/18-react-redux-shelter/package.json
+++ b/18-react-redux-shelter/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
     "@reduxjs/toolkit": "^1.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-spinners": "^0.13.3",
     "redux": "^4.2.0",
     "semantic-ui-css": "^2.4.1"
   },
